--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --report",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
+    "echarts": "5.2.1",
+    "element-ui": "^2.15.13",
     "vue": "^2.6.14",
+    "vue-quill-editor": "3.0.6",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
